--- a/DesignerRHN/DesignerRHN-war/web/NReportesContabilidad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/NReportesContabilidad.xhtml
@@ -281,7 +281,7 @@
                         <h:outputText style="position: absolute; top: 90px; left: 10px;font-weight: bold;" value="#{msg['contabilidad']}"/>
 
                         <fieldset  style="position: absolute; left: 10px; top: 110px; font-size: 10px; width: 400px; height: 150px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 11px; color: blue;text-align: left"><strong>Envío Por Correo</strong></legend>
+                            <legend style="font-size: 11px; color: blue;text-align: left"><strong>#{msg['envioporcorreo']}</strong></legend>
                             <h:outputText value="#{msg['de']}" style="position: absolute; left: 10px; top: 25px;font-size: 12px"/>
                             <p:inputText value="nomina@designer.com.co" style="position: absolute; left: 80px; top: 20px;font-size: 12px;width: 300px"/>
                             <h:outputText value="#{msg['para']}" style="position: absolute; left: 10px; top: 60px;font-size: 12px"/>
